Created simple generation script for main demo page, added spaces to a few demo directories

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "demos-and-deviations",
   "version": "1.0.0",
+  "type": "module",
   "description": "Jason Brown aka Loktars code demos and ideas",
   "main": "index.js",
   "scripts": {
