Added proper build task for generating site

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "generate": "node ./scripts/generateList.js",
-    "build": "node ./scripts/makeSite.js",
+    "makeSite": "node ./scripts/makeSite.js",
+    "build": "npm run generate & npm run makeSite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
