--- a/.github/workflows/buid-site.yml
+++ b/.github/workflows/buid-site.yml
@@ -30,3 +30,7 @@ jobs:
     - run: npm run build --if-present
     - name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v3.7.3
+      if: ${{ github.ref == 'refs/heads/gh-pages' }}
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist
