--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/loktar00/demos-and-deviations#readme",
   "dependencies": {
+    "@fontsource/lato": "^4.5.9",
     "connect": "^3.7.0",
     "fs-extra": "^10.1.0",
     "graceful-fs": "^4.2.10",
