--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "puppeteer": "^15.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load": "^4.0.0",
     "serve-static": "^1.15.0",
     "typescript": "^4.7.4"
   },
